# ResearchPal

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: gitleaks-check.yml  gui-eslint-check.yml  ruff-format-check.yml  ruff-lint-check.yml  uv-env-check.yml
apps/backend/: .gitignore  CLAUDE.md  pyproject.toml
apps/gui/src/research_pal/: package-lock.json  package.json
apps/gui/src/research_pal/app/: globals.css  layout.tsx  page.tsx
apps/gui/src/research_pal/app/app/: page.tsx
apps/gui/src/research_pal/app/app/chat/: page.tsx
apps/gui/src/research_pal/app/app/documents/: page.tsx
apps/gui/src/research_pal/app/app/topics/: page.tsx
apps/gui/src/research_pal/components/chat/: chat-input.tsx  message-bubble.tsx  message-list.tsx  paper-selector.tsx  source-citation.tsx  voice-indicator.tsx
apps/gui/src/research_pal/components/dashboard/: activity-feed.tsx  empty-state.tsx  recent-papers.tsx  stats-grid.tsx
apps/gui/src/research_pal/components/documents/: document-card.tsx  document-grid.tsx  upload-progress.tsx  upload-zone.tsx
apps/gui/src/research_pal/components/landing/: feature-card.tsx  footer.tsx  hero.tsx  icons.tsx  navbar.tsx
apps/gui/src/research_pal/components/layout/: app-shell.tsx  sidebar.tsx  top-bar.tsx
apps/gui/src/research_pal/components/topics/: keyword-input.tsx  topic-form.tsx  topic-list.tsx  topic-status-badge.tsx
apps/gui/src/research_pal/hooks/: use-chat.ts  use-documents.ts  use-file-upload.ts  use-papers.ts  use-topics.ts  use-voice-input.ts
apps/gui/src/research_pal/lib/: api-client.ts
apps/gui/src/research_pal/stores/: chat-store.ts  document-store.ts  paper-store.ts  topic-store.ts
apps/gui/src/research_pal/types/: activity.ts  api.ts  chat.ts  document.ts  paper.ts  topic.ts
memory/spec/frontend/: CLAUDE.md
