[project]
name = "research-pal"
version = "0.1.0"
description = "Backend for ResearchPal - AI-powered arXiv paper curation and voice-based chat"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.12",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black Formatter.
line-length = 88
indent-width = 4

# Set Python Version - 3.12
target-version = "py312"

fix = false


[tool.ruff.lint]


select = ["E4", "E7", "E9", "F", "B", "T20", "N", "ANN", "ERA", "PERF"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"



[tool.pyright]
# --- Environment & discovery ---
pythonVersion = "3.12.10"          # Target Python semantics (pattern matching, typing features, stdlib types).
venvPath = "."                   # Where virtual envs live relative to repo root.
venv = ".venv"                   # The specific env name uv manages (uv sync creates .venv).

# --- What to analyze ---
include = ["*"]       # Top-level packages & tests to check.
exclude = [
  "**/.venv", "**/__pycache__", "build", "dist", ".git",
  ".ruff_cache", ".mypy_cache", "tests/", "**/tests/"
]

# --- Global strictness ---
typeCheckingMode = "standard"      # Standard typechecking mode
